chore: expose ports

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -16,9 +16,9 @@ services:
   ibf-dashboard:
     entrypoint: ['echo', 'Service ibf-dashboard disabled']
 
-  ibf-geoserver:
-    ports:
-      - 8081:8080
+  # ibf-geoserver:
+  #   ports:
+  #     - 8081:8080
 
   ibf-local-db:
     image: postgis/postgis
