--- a/tools/nginx.conf
+++ b/tools/nginx.conf
@@ -31,6 +31,7 @@ server {
 
     location /api {
         proxy_pass http://ibf-api-service:3000;
+        # proxy_pass http://localhost:3000;
         proxy_set_header Host             $host;
         proxy_set_header X-Real-IP        $remote_addr;
         proxy_set_header X-Forwarded-For  $proxy_add_x_forwarded_for;
@@ -45,6 +46,7 @@ server {
 
     location /docs {
         proxy_pass http://ibf-api-service:3000/docs;
+        # proxy_pass http://localhost:3000/docs;
         proxy_set_header Host             $host;
         proxy_set_header X-Real-IP        $remote_addr;
         proxy_set_header X-Forwarded-For  $proxy_add_x_forwarded_for;
@@ -58,6 +60,7 @@ server {
 
     location /geoserver {
         proxy_pass http://ibf-geoserver:8080;
+        # proxy_pass http://localhost:8080;
         proxy_set_header Host             $host;
         proxy_set_header X-Real-IP        $remote_addr;
         proxy_set_header X-Forwarded-For  $proxy_add_x_forwarded_for;
