--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,21 +22,43 @@ updates:
     open-pull-requests-limit: 2
     schedule:
       interval: 'weekly'
+    groups:
+      development:
+        patterns:
+          - '@types/*'
+          - '*eslint*'
+          - '*prettier*'
 
   - package-ecosystem: 'npm'
     directory: '/interfaces/IBF-dashboard'
     open-pull-requests-limit: 2
     schedule:
       interval: 'weekly'
+    groups:
+      angular:
+        patterns:
+          - '@angular*'
 
   - package-ecosystem: 'npm'
     directory: '/tests/integration'
     open-pull-requests-limit: 2
     schedule:
       interval: 'weekly'
+    groups:
+      development:
+        patterns:
+          - '@types/*'
+          - '*eslint*'
+          - '*prettier*'
 
   - package-ecosystem: 'npm'
     directory: '/tests/e2e'
     open-pull-requests-limit: 2
     schedule:
       interval: 'weekly'
+    groups:
+      development:
+        patterns:
+          - '@types/*'
+          - '*eslint*'
+          - '*prettier*'
