--- a/example.env
+++ b/example.env
@@ -25,6 +25,7 @@ GEOSERVER_ADMIN_PASSWORD=
 
 # interfaces/IBF-dashboard
 NG_CONFIGURATION=
+BUILD_OUTPUT_PATH=/var/www/ibf-dashboard (this should be the path that tools/nginx.conf is also pointing to)
 NG_USE_SERVICE_WORKER=
 NG_GEOSERVER_URL=
 NG_IBF_SYSTEM_VERSION=
