--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -13,7 +13,7 @@
     "start:dev": "npx tsc-watch --onSuccess \"  node index.js  \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
     "prestart:prod": "tsc",
     "start:prod": "node dist/main.js",
-    "test": "jest --config=jest.json --detectOpenHandles --forceExit --passWithNoTests",
+    "test": "jest --config=jest.json --detectOpenHandles --forceExit",
     "test:dev": "npm test -- --watchAll",
     "test:coverage": "npm test -- --coverage --coverageDirectory=coverage",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
