--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -40,6 +40,8 @@ jobs:
     env:
       SECRET: ${{ secrets.SECRET }}
       MC_API: ${{ secrets.MC_API }}
+      TWILIO_SID: ${{ inputs.twilio-sid }}
+      TWILIO_AUTHTOKEN: ${{ inputs.twilio-authtoken }}
 
     defaults:
       run:
