--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -37,7 +37,7 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${DB_DATABASE}
     volumes:
-      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./tools/db-init.sql:/docker-entrypoint-initdb.d/init.sql
       - ibf-local-db-data:/var/lib/postgresql/data
     ports:
       - 5437:5432
