--- a/tools/nginx.conf
+++ b/tools/nginx.conf
@@ -11,6 +11,7 @@ server {
     error_log  /var/log/nginx/ibf.error.log warn;
 
     root /var/www/ibf-dashboard;
+    # root /home/ibf-user/IBF-system/interfaces/IBF-dashboard/www;
     index index.html;
 
     ##
@@ -31,6 +32,7 @@ server {
 
     location /api {
         proxy_pass http://ibf-api-service:3000;
+        # proxy_pass http://localhost:3000;
         proxy_set_header Host             $host;
         proxy_set_header X-Real-IP        $remote_addr;
         proxy_set_header X-Forwarded-For  $proxy_add_x_forwarded_for;
@@ -45,6 +47,7 @@ server {
 
     location /docs {
         proxy_pass http://ibf-api-service:3000/docs;
+        # proxy_pass http://localhost:3000/docs;
         proxy_set_header Host             $host;
         proxy_set_header X-Real-IP        $remote_addr;
         proxy_set_header X-Forwarded-For  $proxy_add_x_forwarded_for;
@@ -58,6 +61,7 @@ server {
 
     location /geoserver {
         proxy_pass http://ibf-geoserver:8080;
+        # proxy_pass http://localhost:8081;
         proxy_set_header Host             $host;
         proxy_set_header X-Real-IP        $remote_addr;
         proxy_set_header X-Forwarded-For  $proxy_add_x_forwarded_for;
