refactor: use same echo message in docker.override and docker.ci

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -14,7 +14,7 @@ services:
     user: root
 
   ibf-dashboard:
-    entrypoint: ['echo', 'Service ibf-dashboard disabled']
+    entrypoint: ['echo', 'ibf-dashboard is disabled']
 
   ibf-local-db:
     image: postgis/postgis
