--- a/services/API-service/Dockerfile
+++ b/services/API-service/Dockerfile
@@ -2,7 +2,10 @@ FROM node:20-alpine
 
 RUN apk update && apk add python3 make g++ git
 
-RUN mkdir --parents /home/ibf/api-service/node_modules && mkdir /home/ibf/api-service/dist && chown -R node:node /home/ibf/api-service
+RUN mkdir -p /home/ibf/api-service/node_modules && \
+    mkdir -p /home/ibf/api-service/dist && \
+    chown -R node:node /home/ibf/api-service && \
+    chmod -R 755 /home/ibf/api-service
 
 WORKDIR /home/ibf/api-service/
 
