--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -55,6 +55,8 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "@automock/adapters.nestjs": "^2.1.0",
+    "@automock/jest": "^2.1.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
