--- a/interfaces/IBF-dashboard/package.json
+++ b/interfaces/IBF-dashboard/package.json
@@ -8,8 +8,7 @@
     "build:prod": "npm run build -- --configuration production",
     "compress": "gzipper compress --skip-compressed --remove-larger --gzip --gzip-level 9 ./www/browser/",
     "e2e": "ng e2e",
-    "format:fix": "npm run format:check -- --write",
-    "format:check": "prettier --check \"**/*.{md,js,ts,scss,html}\" ",
+    "fix": "ng lint --fix",
     "lint:check": "ng lint",
     "lint": "npx npm-run-all --print-label --parallel lint:check format:check",
     "ng": "ng",
