chore: small corrections

--- a/interfaces/IBF-dashboard/package.json
+++ b/interfaces/IBF-dashboard/package.json
@@ -9,8 +9,7 @@
     "compress": "gzipper compress --skip-compressed --remove-larger --gzip --gzip-level 9 ./www/browser/",
     "e2e": "ng e2e",
     "fix": "ng lint --fix",
-    "lint:check": "ng lint",
-    "lint": "npx npm-run-all --print-label --parallel lint:check format:check",
+    "lint": "ng lint",
     "ng": "ng",
     "postbuild:prod": "npm run compress",
     "prebuild": "npm run set-env-variables",
