--- a/interfaces/IBF-dashboard/package.json
+++ b/interfaces/IBF-dashboard/package.json
@@ -97,8 +97,7 @@
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^8.11.0",
-    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
+    "typescript-eslint": "^8.11.0"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-musl": "^4.24.0"
