--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -66,6 +66,7 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsc-watch": "^6.0.0",
+    "tsconfig-paths": "^3.9.0",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
     "yargs": "^17.0.0"
   }
