--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -38,12 +38,16 @@
     "class-validator": "^0.14.0",
     "csv-parser": "^3.0.0",
     "date-fns": "^3.6.0",
+    "ejs": "^3.1.10",
     "jsonwebtoken": "^9.0.2",
+    "juice": "^11.0.0",
     "mailchimp-api-v3": "^1.15.0",
     "mjml": "^4.15.3",
+    "mysql": "^2.15.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "slug": "^4.0.2",
     "twilio": "^5.3.5",
     "typeorm": "^0.3.6",
     "typescript": "^4.9.5"
@@ -57,12 +61,17 @@
     "@types/node": "22.x",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
+    "atob": ">=2.1.0",
+    "deep-extend": ">=0.5.1",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "28.x",
     "eslint-plugin-prettier": "^5.2.1",
+    "extend": ">=3.0.2",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.7",
     "prettier": "^3.4.2",
+    "swagger-ui-express": "^5.0.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsc-watch": "^6.0.0",
