--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -58,7 +58,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "22.x",
+    "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
     "atob": ">=2.1.0",
