--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "test:interface": "npm test --prefix interfaces/IBF-dashboard/",
     "test:e2e": "npm test --prefix tests/e2e",
     "test:integration": "npm test --prefix tests/integration",
-    "lint": "npx npm-run-all --print-label --parallel lint:interface lint:services",
+    "lint": "npx npm-run-all --print-label --parallel lint:interface lint:services lint:e2e lint:integration",
     "lint:services": "npm run lint --prefix services/API-service/",
     "lint:interface": "npm run lint --prefix interfaces/IBF-dashboard/",
+    "lint:e2e": "npm run lint --prefix tests/e2e",
+    "lint:integration": "npm run lint --prefix tests/integration",
     "prepare": "husky"
   },
   "dependencies": {
