ci: tie @bluehalo, zone.js to angular packages in dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -44,6 +44,8 @@ updates:
       angular:
         patterns:
           - '@angular*'
+          - '@bluehalo/*'
+          - 'zone.js'
     ignore:
       - dependency-name: '*'
         update-types: ['version-update:semver-patch']
