--- a/interfaces/IBF-dashboard/package.json
+++ b/interfaces/IBF-dashboard/package.json
@@ -48,7 +48,7 @@
     "rxjs": "~6.6.0",
     "tsconfig": "^7.0.0",
     "tslib": "^2.0.0",
-    "zone.js": "^0.15.0"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.0.6",
@@ -73,7 +73,7 @@
     "@types/node": "^20.14.10",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
-    "angular-eslint": "^18.4.0",
+    "angular-eslint": "^19.0.2",
     "autoprefixer": "^10.4.7",
     "esbuild": "^0.24.0",
     "eslint": "^8.57.0",
