ci: group turf packages in dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -46,6 +46,9 @@ updates:
           - '@angular*'
           - '@bluehalo/*'
           - 'zone.js'
+      turf:
+        patterns:
+          - '@turf*'
     ignore:
       - dependency-name: '*'
         update-types: ['version-update:semver-patch']
