chore: only bump version if all tests succeed AB#31892

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -115,8 +115,8 @@ jobs:
   bump-version:
     needs: [ibf-api-service, ibf-dashboard, ibf-integration, ibf-e2e]
     if: |
-      always() &&
-      github.event_name == 'push'
+      github.event_name == 'push' &&
+      success()
 
     runs-on: ubuntu-latest
 
