--- a/interfaces/IBF-dashboard/tsconfig.json
+++ b/interfaces/IBF-dashboard/tsconfig.json
@@ -24,7 +24,8 @@
     "target": "ES2022",
     "module": "es2020",
     "lib": ["es2020", "dom"],
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+    "resolveJsonModule": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": true,
