chore: upgrade geoserver AB#33134

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,10 +72,10 @@ services:
 
   ibf-geoserver:
     container_name: ibf-geoserver
-    image: kartoza/geoserver:2.19.2
+    image: kartoza/geoserver:2.26.1
     environment:
       - GEOSERVER_ADMIN_PASSWORD=${GEOSERVER_ADMIN_PASSWORD}
-      - JAVA_OPTS="-DALLOW_ENV_PARAMETRIZATION=true"
+      - CATALINA_OPTS="-DALLOW_ENV_PARAMETRIZATION=true"
     ports:
       - 8081:8080
     volumes:
