chore: remove heavy-rain from code

--- a/example.env
+++ b/example.env
@@ -18,7 +18,7 @@ DASHBOARD_URL=http://localhost:4200
 COUNTRIES=UGA,ZMB,ETH,PHL,ZWE,MWI,SSD
 # If a disaster-type should not load for possible countries, then list the countries to load as in the example below
 # If no countries specified, then the disaster-type will load for all possible countries  
-DISASTER_TYPES=floods:UGA-ZMB-ETH-KEN,heavy-rain,malaria,drought,typhoon,flash-floods
+DISASTER_TYPES=floods:UGA-ZMB-ETH-KEN,malaria,drought,typhoon,flash-floods
 
 # IBF-geoserver
 GEOSERVER_ADMIN_PASSWORD=
@@ -42,7 +42,7 @@ PRODUCTION_DATA_SERVER=<yes/no> #Note: staging is not considered production here
 MC_API=
 MC_LIST_ID=
 # Enter segments in this specific format; current values are 'test segments', only replace on production-servers
-MC_SEGMENTS=UGA_drought:102274,UGA_floods:2525654,UGA_heavy-rain:2539574,PHL_floods:2525658,PHL_typhoon:2525662,ZMB_floods:90286,KEN_drought:90702,KEN_floods:2525674,ETH_drought:90706,ETH_floods:2525678,ETH_malaria:2525682,ZWE_drought:105794,MWI_floods:2163966,MWI_flash-floods:2525790,SSD_floods:2520726,LSO_drought:2984049
+MC_SEGMENTS=UGA_drought:102274,UGA_floods:2525654,PHL_floods:2525658,PHL_typhoon:2525662,ZMB_floods:90286,KEN_drought:90702,KEN_floods:2525674,ETH_drought:90706,ETH_floods:2525678,ETH_malaria:2525682,ZWE_drought:105794,MWI_floods:2163966,MWI_flash-floods:2525790,SSD_floods:2520726,LSO_drought:2984049
 
 # Twilio
 EXTERNAL_API_SERVICE_URL= #end with slash
