--- a/interfaces/IBF-dashboard/package.json
+++ b/interfaces/IBF-dashboard/package.json
@@ -63,9 +63,8 @@
     "@angular/compiler-cli": "^19.1.2",
     "@angular/language-service": "^19.1.2",
     "@ionic/cli": "^7.2.0",
-    "@tailwindcss/aspect-ratio": "latest",
-    "@tailwindcss/forms": "latest",
-    "@tailwindcss/line-clamp": "latest",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
     "@tanstack/eslint-plugin-query": "^5.61.3",
     "@types/jasmine": "^5.1.4",
     "@types/leaflet": "^1.9.12",
