--- a/.github/workflows/workflow-pull_request.yml
+++ b/.github/workflows/workflow-pull_request.yml
@@ -72,6 +72,7 @@ jobs:
           node-version-file: './interfaces/IBF-dashboard/.node-version'
       - run: npm ci --no-audit
       - run: npm run lint
+      - run: npm run build
       - run: npm test
 
   ibf-integration:
