build: turn on strict null checks

--- a/interfaces/IBF-dashboard/tsconfig.json
+++ b/interfaces/IBF-dashboard/tsconfig.json
@@ -26,7 +26,8 @@
     "module": "es2020",
     "lib": ["es2020", "dom"],
     "useDefineForClassFields": false,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "strictNullChecks": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": true,
