build: turn off strict null checks

--- a/interfaces/IBF-dashboard/tsconfig.json
+++ b/interfaces/IBF-dashboard/tsconfig.json
@@ -27,7 +27,7 @@
     "lib": ["es2020", "dom"],
     "useDefineForClassFields": false,
     "resolveJsonModule": true,
-    "strictNullChecks": true
+    "strictNullChecks": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": true,
